[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosecaudit"
version = "0.1.0"
description = "Safe read-only security automation framework for internal blue team auditing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AutoSecAudit Team" }
]
dependencies = [
  "bcrypt>=3.2,<4",
  "fastapi>=0.115,<1",
  "pydantic>=2.0,<3",
  "PyJWT>=2.9,<3",
  "passlib[bcrypt]>=1.7,<2",
  "prometheus-fastapi-instrumentator>=7.1,<8",
  "uvicorn>=0.34,<1",
]

[project.scripts]
autosecaudit = "autosecaudit.cli:main"
autosecaudit-web = "autosecaudit.webapp.server:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=9,<10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autosecaudit*"]

[tool.setuptools.package-data]
"autosecaudit.webapp" = ["static/*", "frontend_dist/*", "frontend_dist/assets/*"]
"autosecaudit.skills" = ["*.yaml"]
