[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosecaudit"
version = "0.1.0"
description = "Agent-oriented, read-only reconnaissance and validation toolkit with reusable skill packs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AutoSecAudit Team" }
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.0,<3",
]

[project.scripts]
autosecaudit = "autosecaudit.cli:main"

[project.optional-dependencies]
dev = [
  "playwright>=1.54,<2",
  "pytest>=9,<10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autosecaudit*"]

[tool.setuptools.package-data]
"autosecaudit.skills" = ["*.yaml", "**/*"]
