[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosecaudit"
version = "0.1.0"
description = "Network security information gathering tool for AI agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AutoSecAudit Team" }
]
keywords = [
  "ai-agent",
  "autonomous-security",
  "information-gathering",
  "network-security",
  "reconnaissance",
  "skill-pack",
  "vulnerability-validation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Networking",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/lynolz163/autosecaudit"
Repository = "https://github.com/lynolz163/autosecaudit"
Issues = "https://github.com/lynolz163/autosecaudit/issues"

[project.scripts]
autosecaudit = "autosecaudit.cli:main"

[project.optional-dependencies]
dev = [
  "playwright>=1.54,<2",
  "pytest>=9,<10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autosecaudit*"]

[tool.setuptools.package-data]
"autosecaudit.skills" = ["*.yaml", "**/*"]
